--- a/lab7/lab7.qmd
+++ b/lab7/lab7.qmd
@@ -6,7 +6,7 @@ format:
     embed-resources: true
 jupyter: python3
 ---
-[View this project on GitHub]()
+[View this project on GitHub](https://github.com/shxwheen/msba-ml-labs/blob/main/lab7/lab7.html)
 
 # Imports
 ```{python}
