--- a/lab8/lab8.qmd
+++ b/lab8/lab8.qmd
@@ -7,6 +7,7 @@ format:
 jupyter: python3
 ---
 
+[View this project on GitHub](https://github.com/shxwheen/msba-ml-labs/tree/main/lab8)
 ```{python}
 import warnings
 warnings.filterwarnings('ignore')
